--- a/index.html
+++ b/index.html
@@ -7,32 +7,63 @@
   <!-- font awesome -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
+  <!-- bootstrap -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+
+  <!-- vue -->
+  <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
+
   <link rel="stylesheet" href="css/style.css">
   <title>Carosello Array di Oggetti</title>
 </head>
 <body>
   
-  <div class="main-wrapper">
+  <div class="main-wrapper" id="app">
 
-    <div class="container">
+    <div class="gg-container">
 
       <div class="slider">
 
         <div class="items-wrapper">
 
+          <div class="gg-card image">
+
+            <!-- mostro l'immagine che ha il valore del counter corrente -->
+            <img :src="posters[counter]" alt="">
+
+            <!-- mostro le informazioni dell'immagine corrente -->
+            <div class='title'>
+              <h2>{{gameData[counter].title}}</h2>
+              <span>{{gameData[counter].description}}</span>
+            </div>
+
+          </div>
+
         </div>
 
         <div class="thumbs-wrapper">
 
+          <!-- ciclo e stampo le immagini piccole -->
+          <img
+            v-for="(poster, index) in posters"
+            @click="counter = index"
+            :class="{'active': index === counter}"
+            :src="poster"
+            alt=""
+          >
+          
         </div>
 
         <div class="buttons">
 
-          <div class="btn-arrow prev">
+          <!-- bottone per andare indietro con le immagini -->
+          <div @click="nextPrev(false)" class="btn-arrow prev">
             <i class="fa-solid fa-chevron-up"></i>
           </div>
 
-          <div class="btn-arrow next">
+          <!-- bottone per andare avanti con le immagini -->
+          <div @click="nextPrev(true)" class="btn-arrow next">
             <i class="fa-solid fa-chevron-down"></i>
           </div>
           
