[add] functions to stop and resume autoscroll

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     <div class="gg-container">
 
-      <div class="slider">
+      <div class="slider" @mouseover="pauseAutoScroll" @mouseout="resumeAutoScroll">
 
         <div class="items-wrapper">
 
